[package]
name = "wasphax"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "0.18.0"
ctor = "0.1.21"
lazy_static = "1.4.0"
libc = "0.2.103"
log = "0.4.14"
maplit = "1.0.2"
simplelog = "0.10.2"
sdl2-sys = "0.35.0"
glow = "0.11.0"
widestring = "0.5.1"
vecmath = "1.0.0"
vtable = "0.1.3"
